--- a/investbux/.settings/org.eclipse.wst.common.component
+++ b/investbux/.settings/org.eclipse.wst.common.component
@@ -4,6 +4,6 @@
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
         <property name="java-output-path" value="/investbux/build/classes"/>
-        <property name="context-root" value="investbux"/>
+        <property name="context-root" value="mchurner"/>
     </wb-module>
 </project-modules>
