--- a/mchurner/WebContent/resources/customer/css/style.css
+++ b/mchurner/WebContent/resources/customer/css/style.css
@@ -250,7 +250,7 @@ width: 100%
     letter-spacing: 0.7px;
 }
 .mainMenu ul li a:hover, .mainMenu ul li a.activeNav, .mainMenu ul li li a.subActiveNav {
-    color: #000000;
+    color: #2c8cde;
 }
 .mainMenu ul li.dropdown li a{font-size:13px; padding:4px 10px;}
 .dropdown-menu li {
@@ -274,7 +274,7 @@ width: 100%
 }
 .copyRight {
     font-size: 12px;
-    color: #000000;
+    color: #8a8888;
 }
 .prodBtn input, .readBtn input, .readBtn a, .submitBtn input{padding:10px 30px; background:#21a1db; color:#fff; border-radius:5px; cursor:pointer;}
 .fcData a{    color: #066996;
@@ -381,4 +381,17 @@ a.newAc span{display:inline-block; border-bottom:1px solid #21a1db}
 }
 .vl{
     color:#ff7800!important
+}
+/*new css*/
+.tabContHold01{
+    margin-top: 0px!important;
+}
+.tabContainer01{
+    display: inline-block!important;
+    width: 100%!important;
+}
+@media only screen and (max-width: 600px) and (min-width: 320px) {
+    .profile-circle img{
+            width: 25%;
+    }
 }
