--- a/mchurner/WebContent/resources/customer/css/style.css
+++ b/mchurner/WebContent/resources/customer/css/style.css
@@ -26,9 +26,24 @@ body{font-family:'Poppins', sans-serif; color:#000000; font-size:100%; font-size
 .mainMenu ul li.dropdown .dropdown-menu{margin-top:-15px;}
 
 
+.ddBox {
+	position: absolute;
+	text-align: center;
+	width: 100%;
+	border: 1px solid #f2f2f2;
+	top: 55px;
+	padding: 10px 0;
+	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23) !important;
+	background:#fff;
+	z-index:2;
+	display:none;
+}
+
+.ddBox  span {cursor:pointer;}
+
 .contNo_mobl p{margin:0;}
 .loginHold_mobl{clear:both; display:none; background:#c7c7d2; padding:10px 0; text-align:center;}
-.loginHold_mobl a{display:inline-block; padding:10px; text-decoration:none; background:#23527c; color:#fff; width:120px; text-align:center; margin-right:10px; text-transform:uppercase;}
+.loginHold_mobl a{display:inline-block; padding:10px; text-decoration:none; background:#23527c; color:#fff; width:130px; text-align:center; margin-right:10px; text-transform:uppercase;}
 
 .contNo span{font-size:16px;}
 .hmContentHold{padding:30px 0 0 0;}
@@ -93,8 +108,53 @@ body{font-family:'Poppins', sans-serif; color:#000000; font-size:100%; font-size
 .boxData.tnc, .boxData.tnc > ul, .boxData.tnc h5, .boxData.tnc h5, .boxData.tnc h6{width:auto; text-align:left;}
 .boxData.tnc h3{text-align:center;}
 .boxData.tnc h5{font-weight:600;}
-
+.tableContainer{overflow:auto; margin-bottom:20px;}
+.tableContainer .table > thead > tr > th{ white-space: nowrap;}
 .prodBtn{margin:40px 0; text-align:center;}
+
+.viewtn {
+	font-size: 13px;
+	background: #0066ff;
+	padding: 4px 12px;
+	color: #fff;
+	border-radius: 5px;
+}
+
+.viewtn:hover {
+	background: #275baa;
+	color: #fff;
+	text-decoration: none;
+}
+
+.dateHold .dtCol {
+	float: left;
+	width: 50%;
+}
+
+.calendarControl, .booking_onlineBox .formRow {
+	clear: both;
+}
+
+.dateHold .calendarControl input {
+	border: 1px solid #ccc;
+	box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+}
+
+.calendarControl input.hasDatepicker {
+	float: left;
+	padding: 2px 5px;
+}
+
+.calendarControl img.ui-datepicker-trigger {
+	float: left;
+	margin-left: 5px;
+}
+
+.dateHold .submitBtn {
+	clear: both;
+	padding-top: 30px;
+}
 
 .readBtn input, .readBtn a{background:#00a8ff;}
 input[type="button"]:hover, .readBtn a:hover{background:#275baa;text-decoration:none;}
@@ -110,6 +170,7 @@ input[type="button"]:hover, .readBtn a:hover{background:#275baa;text-decoration:
 .fLogo{display:table-cell; vertical-align:middle; font-size:28px; padding:30px 15px; line-height:30px; text-transform:uppercase;}
 .ftMenu ul{overflow:hidden; margin:0}
 .ftMenu ul li a{display:inline-block; color:#e8e8e8; padding:6px 7px;}
+.ftMenu ul.sub-menu li a{padding:0px 7px 4px 20px; background:url(../images/submenu-List-icon.png) 8px 7px no-repeat;}
 .contInfo{color:#d5d1d1;}
 .contInfo a, .contInfo span{color:#fff;}
 .footer{clear:both; text-align:center; padding:10px 0; background:#2d2e2f; color:#fff;}
@@ -177,60 +238,7 @@ input[type="button"]:hover, .readBtn a:hover{background:#275baa;text-decoration:
 .upload + .uploadButton {height:38px;}
 .fileName{position:absolute; top:7px; white-space:nowrap; overflow:hidden; text-overflow:ellipsis;}
 
-@media screen and (max-width:1024px){
-  .imgInfo{width:55%;}
-}
-
-@media screen and (min-width:801px){
- .mainHeader .navbar-collapse.collapse{display:block;}
-}
-
-@media screen and (max-width:800px){
-	.loginHold, .contNo{display:none;}
-	.loginHold_mobl, .contNo_mobl{display:block;}
-	.mainMenu {float:none;}
-	.mainMenu.in{background:#fff;}
-	.mainHeader .navbar-toggle{display:block;}	
-	.mainHeader .navbar-default{width:100%; background:#fff;}
-	.mainHeader .navbar-collapse{padding:0;}
-	.mainHeader .navbar-nav{margin-top:0; margin-bottom:0;}
-	.mainHeader .navbar-nav, .mainHeader .navbar-nav > li, .mainHeader .navbar-header{float:none;}
-	.mainMenu .nav .open > a{padding-bottom:15px;}
-	.mainMenu > .nav > li{border-bottom:1px solid #e5e5e5}
-	.mainMenu ul li.dropdown-menu{padding-top:0;}
-	.mainMenu ul li.dropdown, .mainMenu ul li.dropdown > a:hover, .mainMenu ul li.dropdown > a:focus{background:url(../images/menuArrow.png) 95% 22px no-repeat;}
-	.mainHeader .navbar-brand{padding:15px;}
-	
-	
-	.navbar-nav .open .dropdown-menu{background-color:transparent; border:0; box-shadow:none; float:none; margin-top:0; position:static; width:auto;}
-
-   .navbar-nav .open .dropdown-menu > li > a, .navbar-nav .open .dropdown-menu .dropdown-header {padding:5px 15px 5px 25px;}
-		
-}
-
-@media screen and (max-width:767px){
-	.mainMenu .nav .open > a{padding-bottom:3px;}
-	.tabContainer h4{display:block; padding:12px 10px; background:#3ea6ff; color:#fff; font-size:17px; font-weight:400;}
-	.tabList{display:none;}
-	.mainMenu ul li a{padding:15px;}
-	.mainHeader .navbar-collapse{padding:0 15px;}
-	.mainHeader .navbar-default{/*margin-bottom:10px;*/}
-	.mainMenu ul li.dropdown .dropdown-menu{margin-top:0;}
-	.LFloat, .RFloat{float:none;}
-	.dataInfo img{margin-bottom:30px;}
-	.imgInfo, .contInfo{clear:both;}
-	.imgInfo{margin-top:30px; width:100%; }	
-	.ftMenu li{float:left;}
-	.contInfo{padding-top:15px;}
-	.fLogo, .ftMenu ul li:first-child a, .contInfo{padding-left:0;}
-	.tabContHold{margin-top:0;}
-	.ourProductContainer, .productLoan{padding-bottom:150px; background-size:contain;}
-}
-
-@media screen and (max-width:600px){
-	.pgContainer h2{font-size:20px;}
-	
-}
+.alert-success{display:none;}
 
 /*new css*/
 .logo img {
@@ -244,13 +252,13 @@ width: 100%
     display: block;
     padding: 27px 15px;
     color: #000000;
-    font-weight: 500;
+    font-weight: 550;
     text-transform: uppercase;
     font-size: 14px;
     letter-spacing: 0.7px;
 }
 .mainMenu ul li a:hover, .mainMenu ul li a.activeNav, .mainMenu ul li li a.subActiveNav {
-    color: #000000;
+    color: #2c8cde;
 }
 .mainMenu ul li.dropdown li a{font-size:13px; padding:4px 10px;}
 .dropdown-menu li {
@@ -274,7 +282,7 @@ width: 100%
 }
 .copyRight {
     font-size: 12px;
-    color: #000000;
+    color: #8a8888;
 }
 .prodBtn input, .readBtn input, .readBtn a, .submitBtn input{padding:10px 30px; background:#21a1db; color:#fff; border-radius:5px; cursor:pointer;}
 .fcData a{    color: #066996;
@@ -290,6 +298,7 @@ a.newAc span{display:inline-block; border-bottom:1px solid #21a1db}
 
 .addressInfo {
     padding: 0px 20px;
+	margin-bottom:30px;
 }
 
 .addressInfo h2 {
@@ -297,6 +306,9 @@ a.newAc span{display:inline-block; border-bottom:1px solid #21a1db}
     width: 100%;
     padding-bottom: 11px;
 }
+
+.mapHold iframe{width:600px}
+
 .about_us h2{
 	    padding: 0px 0px;
 		letter-spacing: 0.6px;
@@ -338,7 +350,7 @@ a.newAc span{display:inline-block; border-bottom:1px solid #21a1db}
     text-transform: uppercase;
     letter-spacing: 0.8px;
 }
-.scContainer .tabList ul li{width:16.66%;}
+.scContainer .tabList ul li{width:16.6666666%;}
 .tabList ul li a {
     display: block;
     padding: 16px 0;
@@ -351,6 +363,7 @@ a.newAc span{display:inline-block; border-bottom:1px solid #21a1db}
 .img-responsive {
     margin: 0 auto
 }
+
 .Testimonialhold{padding:50px 0; background:#1f9dd812;width: 100%;background-size: 100% 100%}
 .Testimonialhold .carousel-caption{position:relative; width:80%; min-height:250px; left:0; bottom:0; margin:0 auto; padding:20px 0; color:#000000; text-shadow:none;    letter-spacing: 1.5px;
     line-height: 26px;}
@@ -382,3 +395,116 @@ a.newAc span{display:inline-block; border-bottom:1px solid #21a1db}
 .vl{
     color:#ff7800!important
 }
+/*new css*/
+.tabContHold01{
+    margin-top: 0px!important;
+}
+.tabContainer01{
+    display: inline-block!important;
+    width: 100%!important;
+}
+
+@media screen and (max-width:1024px){
+  .mainMenu ul li a{padding:31px 10px;}
+  .imgInfo{width:55%;}
+  .mapHold iframe{width:455px}
+  .ourProductContainer .tabList{width:95%;}
+}
+
+@media screen and (max-width:980px){
+  .mapHold iframe{width:720px}
+}
+
+@media screen and (min-width:801px){
+ .mainHeader .navbar-collapse.collapse{display:block;}
+}
+
+@media screen and (max-width:800px){
+	.loginHold, .contNo{display:none;}
+	.loginHold_mobl /*.contNo_mobl*/{display:block; margin:0 -25px;}
+	.mainMenu {float:none;}
+	.mainMenu.in{background:#fff;}
+	.mainHeader .navbar-toggle{display:block;}	
+	.mainHeader .navbar-default{width:100%; background:#fff;}
+	.mainHeader .navbar-collapse{padding:0;}
+	.mainHeader .navbar-nav{margin-top:0; margin-bottom:0;}
+	.mainHeader .navbar-nav, .mainHeader .navbar-nav > li, .mainHeader .navbar-header{float:none;}
+	.mainMenu .nav .open > a{padding-bottom:15px;}
+	.mainMenu > .nav > li{border-bottom:1px solid #e5e5e5}
+	.mainMenu ul li.dropdown-menu{padding-top:0;}
+	.mainMenu ul li.dropdown, .mainMenu ul li.dropdown > a:hover, .mainMenu ul li.dropdown > a:focus{background:url(../images/menuArrow.png) 95% 22px no-repeat;}
+	.mainHeader .navbar-brand{padding:15px;}
+	.mainMenu ul li a{padding:15px;}
+	.mainMenu ul li.dropdown .dropdown-menu{margin-top:12px;}
+	.navbar-nav .open .dropdown-menu{background-color:transparent; border:0; box-shadow:none; float:none; margin-top:0; position:static; width:auto;}
+
+   .navbar-nav .open .dropdown-menu > li > a, .navbar-nav .open .dropdown-menu .dropdown-header {padding:5px 15px 5px 25px;}
+   .ourProductContainer .RD .tabList ul li a{padding:15px 8px;}
+}
+
+@media screen and (max-width:768px){
+	.dataInfo{margin-bottom:0;}
+	.scContainer .tabData .submitBtn{width:40%;}
+	.prodBtn input, .readBtn input, .readBtn a, .submitBtn input{padding:10px;}
+	.ourProductContainer .tabContainer .tabData{width:100%; padding:20px}
+	.scContainer .tabContainer .tabData{width:100%; padding:20px 20px 0 20px}
+	.tabContainer .tabData h3{margin-bottom:15px; font-size:22px;}
+	.boxData{margin-bottom:20px;}
+}
+
+@media screen and (max-width:767px){
+	.mainMenu .nav .open > a{padding-bottom:3px;}
+	.loginHold_mobl{margin:0;}
+	.tabContainer h4{display:block; padding:12px 10px; background:#3ea6ff; color:#fff; font-size:17px; font-weight:400; cursor:pointer;}
+	.tabList{display:none;}
+	.mainHeader .navbar-collapse{padding:0 15px;}
+	.mainHeader .navbar-default{/*margin-bottom:10px;*/}
+	.LFloat, .RFloat{float:none;}
+	.dataInfo img{margin-bottom:30px;}
+	.imgInfo, .contInfo{clear:both;}
+	.imgInfo{margin-top:30px; width:100%; }	
+	.contInfo{padding-top:15px;}
+	.fLogo, .ftMenu ul li:first-child a, .contInfo{padding-left:0;}
+	.fLogo{display:block; padding-bottom:10px; text-align:center;}
+	.ftMenu, .contInfo{margin-top:0px;}
+	.ftMenu li{float:left;}
+	.tabContHold{margin-top:0;}
+	.tabData .text-center{text-align:left;}
+	.tabData p.text-center {text-align:center; margin-top:15px;}
+	.ourProductContainer, .productLoan{padding-bottom:250px; background-size:contain;}
+	.scContainer .tabData .submitBtn{width:170px;}
+	.prodBtn input, .readBtn input, .readBtn a, .submitBtn input{padding:10px 15px;}
+	.uploadBtn{width:auto}
+	.sub-menu{display:none;}
+	.mapHold iframe{width:100%}
+}
+
+@media screen and (max-width:600px){
+	.pgContainer h2{font-size:20px;}
+	.ourProductContainer, .productLoan{padding-bottom:200px}
+	.productLoan .img-responsive {margin:15px 0;}
+
+}
+
+@media only screen and (max-width: 600px) and (min-width: 320px) {
+    .profile-circle img{
+            width: 25%;
+    }
+}
+
+@media screen and (max-width:500px){
+	.dateHold .dtCol {clear:both; float:none; width:100%;}
+	.dateHold .dtCol  h6 {padding-top:0}
+}
+
+@media screen and (max-width:380px){
+	.ftMenu ul li a {padding:6px 3px; font-size:12px;}
+	.formContainer{width:90%;}
+	.ourProductContainer, .productLoan{padding-bottom:150px}
+}
+
+
+
+
+
+
